# utf8dok

./: .gitignore  BRIDGE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_CONTEXT.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP_SCHEDULE.md  claim-crate.sh  tarpaulin.toml  utf8dok-overview.md  utf8dok.toml
.github/workflows/: ci.yml  release.yml
architecture/: TECHNICAL_SPEC.md
architecture/decisions/adr/: ADR-001-why-utf8dok.md  ADR-002-rust-for-asciidoc.md  ADR-003-parser-technology.md  ADR-004-tck-first-development.md  ADR-005-image-support.md  ADR-006-rendition-fidelity.md  ADR-007-style-mapping-architecture.md  ADR-008-essential-platform-template.md  ADR-009-cover-page-architecture.md  ADR-010-pptx-dual-nature-documents.md  template.md
architecture/infrastructure/: ci-cd.py
architecture/roadmap/: LAUNCH_STRATEGY.md  PRODUCT_VISION.md
architecture/software/: workspace.dsl
architecture/specs/: COVER-PAGE-SPEC.md  PPTX-GENERATION-SPEC.md
crates/utf8dok-ast/: Cargo.toml
crates/utf8dok-ast/src/: block.rs  document.rs  inline.rs  intent.rs  lib.rs
crates/utf8dok-cli/: Cargo.toml
crates/utf8dok-cli/src/: app.rs  lib.rs  main.rs
crates/utf8dok-cli/tests/: integration.rs
crates/utf8dok-core/: Cargo.toml
crates/utf8dok-core/src/: diagnostics.rs  generator.rs  include.rs  lib.rs  parser.rs
crates/utf8dok-core/src/dual_nature/: mod.rs  parser.rs  transformer.rs  types.rs  validator.rs
crates/utf8dok-core/tests/: diagram_spec.rs  include_tests.rs  parser_tdd.rs
crates/utf8dok-data/: Cargo.toml  README.md
crates/utf8dok-data/src/: converter.rs  error.rs  lib.rs
crates/utf8dok-data/src/sources/: csv.rs  excel.rs  mod.rs
crates/utf8dok-data/tests/: integration_tests.rs
crates/utf8dok-data/tests/fixtures/: test_data.xlsx
crates/utf8dok-diagrams/: Cargo.toml  build.rs
crates/utf8dok-diagrams/src/: engine.rs  error.rs  js.rs  kroki.rs  lib.rs  native.rs  renderer.rs  types.rs
crates/utf8dok-lsp/: Cargo.toml
crates/utf8dok-lsp/benches/: lsp_performance.rs
crates/utf8dok-lsp/src/: lib.rs  main.rs  server.rs
crates/utf8dok-lsp/src/compliance/: actions.rs  mod.rs  tests.rs
crates/utf8dok-lsp/src/compliance/bridge/: mod.rs  orphan.rs  status.rs
crates/utf8dok-lsp/src/compliance/dashboard/: html.rs  json.rs  markdown.rs  mod.rs
crates/utf8dok-lsp/src/config/: mod.rs  settings.rs  tests.rs
crates/utf8dok-lsp/src/domain/: mod.rs  platform_tests.rs  registry.rs  semantic.rs  tests.rs  traits.rs
crates/utf8dok-lsp/src/domain/completion/: attribute.rs  block.rs  mod.rs  value.rs  xref.rs
crates/utf8dok-lsp/src/domain/plugins/: bridge.rs  diagrams.rs  generic.rs  mod.rs  quality.rs  rfc.rs
crates/utf8dok-lsp/src/domain/validation/: adr.rs  mod.rs
crates/utf8dok-lsp/src/intelligence/: mod.rs  rename.rs  selection.rs  tests.rs
crates/utf8dok-lsp/src/structural/: folding.rs  mod.rs  scanner.rs  symbols.rs  tests.rs
crates/utf8dok-lsp/src/workspace/: graph.rs  indexer.rs  mod.rs  symbol_provider.rs  tests.rs
crates/utf8dok-lsp/tests/: library_tests.rs
crates/utf8dok-ooxml/: Cargo.toml
crates/utf8dok-ooxml/examples/: extract.rs
crates/utf8dok-ooxml/src/: archive.rs  conversion.rs  document.rs  error.rs  extract.rs  image.rs  lib.rs  manifest.rs  relationships.rs  style_contract_validator.rs  style_map.rs  styles.rs  template.rs  test_utils.rs  writer.rs
crates/utf8dok-ooxml/tests/: document_coverage.rs  image_support.rs  roundtrip_fidelity.rs  writer_coverage.rs
crates/utf8dok-pdf/: Cargo.toml
crates/utf8dok-pdf/src/: compiler.rs  error.rs  lib.rs  transpiler.rs
crates/utf8dok-plugins/: Cargo.toml
crates/utf8dok-plugins/src/: lib.rs
crates/utf8dok-pptx/: Cargo.toml
crates/utf8dok-pptx/src/: error.rs  extractor.rs  layout.rs  lib.rs  slide.rs  slide_contract.rs  template.rs  writer.rs
crates/utf8dok-validate/: Cargo.toml
crates/utf8dok-validate/src/: hierarchy.rs  lib.rs
crates/utf8dok-wasm/: Cargo.toml
crates/utf8dok-wasm/src/: lib.rs
demo/: README.md  template.dotx  utf8dok-guide.adoc  utf8dok-overview.adoc
docs/: RENDER_SPEC.md  index.adoc  manual.adoc
docs/adr/: 0001-architecture.adoc  0002-lsp-first.adoc  0003-plugin-system.adoc
editors/vscode/: .eslintrc.json  .gitignore  language-configuration.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/src/dashboard/: panel.ts
editors/vscode/src/status/: statusBar.ts
rules/: no_passive_voice.rhai  test_plugin.rhai
scripts/: build-extension.sh
templates/utf8dok-essential/: README.md  open_template.dotx  style-contract.toml
tests/bridge/: README.md
