[workspace]
resolver = "2"
members = [
    "crates/utf8dok-core",
    "crates/utf8dok-ast",
    "crates/utf8dok-cli",
    "crates/utf8dok-wasm",
]

[workspace.package]
version = "0.0.1"
authors = ["Alan Bld"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alanbld/utf8dok"

[workspace.dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
