[workspace]
resolver = "2"
members = [
    "crates/utf8dok-core",
    "crates/utf8dok-ast",
    "crates/utf8dok-cli",
    "crates/utf8dok-wasm",
    "crates/utf8dok-ooxml",
    "crates/utf8dok-pptx",
    "crates/utf8dok-diagrams", "crates/utf8dok-validate", "crates/utf8dok-plugins", "crates/utf8dok-lsp", "crates/utf8dok-data", "crates/utf8dok-pdf",
]

[workspace.package]
version = "1.0.0"
authors = ["Alan Bld"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alanbld/utf8dok"

[workspace.dependencies]
# Core dependencies
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
# OOXML dependencies
zip = "2.2"
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"
