[package]
name = "utf8dok-cli"
description = "Command-line interface for utf8dok document processor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["asciidoc", "cli", "documentation"]
categories = ["command-line-utilities"]

[[bin]]
name = "utf8dok"
path = "src/main.rs"

[dependencies]
utf8dok-core = { path = "../utf8dok-core" }
utf8dok-ast = { path = "../utf8dok-ast" }
utf8dok-ooxml = { path = "../utf8dok-ooxml" }
utf8dok-validate = { path = "../utf8dok-validate" }
utf8dok-plugins = { path = "../utf8dok-plugins" }
clap.workspace = true
anyhow.workspace = true
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
zip = "2.2"
serde_json = "1.0"
