[package]
name = "utf8dok-core"
description = "Core library for utf8dok - a blazing-fast document processor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["asciidoc", "parser", "documentation", "markup"]
categories = ["parsing", "text-processing"]

[dependencies]
utf8dok-ast = { path = "../utf8dok-ast" }
utf8dok-data = { path = "../utf8dok-data", optional = true }
anyhow.workspace = true
pest.workspace = true
pest_derive.workspace = true
thiserror.workspace = true
serde.workspace = true
regex = "1.10"

[features]
default = ["data-includes"]
data-includes = ["utf8dok-data"]

[dev-dependencies]
serde_json = "1.0"
