[package]
name = "utf8dok-ooxml"
version = "0.1.0"
edition = "2021"
description = "OOXML (Office Open XML) parsing and generation for utf8dok"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/utf8dok"

[dependencies]
utf8dok-ast = { path = "../utf8dok-ast" }
utf8dok-diagrams = { path = "../utf8dok-diagrams" }
zip = "2.2"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.14"
