[package]
name = "utf8dok-pptx"
version = "0.1.0"
edition = "2021"
description = "PPTX (PowerPoint) generation for utf8dok - AsciiDoc to PPTX conversion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alanbld/utf8dok"

[dependencies]
utf8dok-ast = { path = "../utf8dok-ast" }
utf8dok-ooxml = { path = "../utf8dok-ooxml" }
zip = "2.2"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
