[package]
name = "utf8dok-wasm"
description = "WebAssembly bindings for utf8dok document processor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["asciidoc", "wasm", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
utf8dok-core = { version = "0.0.1", path = "../utf8dok-core" }
utf8dok-ast = { version = "0.0.1", path = "../utf8dok-ast" }
wasm-bindgen = "0.2"
serde.workspace = true
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
